<resources>
    <string name="app_name">Farousa</string>
    <string name="name">name</string>
    <string name="image_show">image show</string>
    <string name="l_e">L.E</string>
    <string name="acacia_wood_and_natural_cane_weaving">Acacia Wood and Natural Cane Weaving</string>
    <string name="product_details">Product Details</string>
    <string name="try_in_your_virtual">Try In Your Virtual</string>
    <string name="farousa_n_team">Farousa\n team</string>
    <string name="ahmed_mohammed_mohammed_mosad">Ahmed Mohammed Mohammed Mosad</string>
    <string name="farousa_n_tteam">Farousa\n\tTeam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="catoegories">Catoegories</string>
    <string name="categories">categories</string>
    <string name="logo">LOGO</string>
    <string name="start_your_ar_journey_with_our_app">start your AR journey with our app</string>
    <string name="start_your_ar_njourney_with_n_tour_app">start your AR\njourney with\n\tour app</string>
    <string name="let_s_start">let’s start</string>
</resources>