<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailFragment">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="@+id/txt_nameProject"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_nameProject" />


    <TextView
        android:id="@+id/txt_nameProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="#981DAE"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/img_logo"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:id="@+id/imageview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:src="@drawable/bar_chair"
        android:contentDescription="@string/image_show"
        app:layout_constraintBottom_toTopOf="@id/info"/>


    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
        android:paddingStart="10dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_virtual"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/try_in_your_virtual"
            android:textColor="@color/black"
            app:cornerRadius="4dp"
            app:icon="@drawable/baseline_camera_24"
            app:iconTint="@color/black" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Smart TV" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="2,000L.E" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/product_details_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/product_details"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/product_full_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Watch full hd and 4k movies and series in this latest model." />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>